--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -455,17 +455,18 @@
     },
     "SCHEDULE_TITLE": "Cronograma estimado",
     "SCHEDULE": {
-      "1": "8:00 - 9:00: Bienvenida y acreditación",
-      "2": "9:00 - 10:00: Homologación",
-      "3": "10:00 - 10:30: Coffee Break",
-      "4": "10:30 - 12:30: Competición: Fase de Grupos",
-      "5": "12:30 - 13:30: Almuerzo",
-      "6": "13:30 - 15:00: Competición: Fase de Grupos",
-      "7": "15:00 - 17:00: Competición: Fase de Eliminación Directa",
-      "8": "17:00 - 17:30: Coffee Break",
-      "9": "17:30 - 18:00: Competición: Final",
-      "10": "18:00 - 18:30: Ceremonia de premiación"
-    },
+      "1": "8:00 - 9:00: Acreditación Competidores",
+      "2": "9:00 - 10:00: Acreditación Espectadores",
+      "3": "9:00 - 10:00: Homologación",
+      "4": "10:00 - 10:20: Coffee Break",
+      "5": "10:20 - 10:30: Bienvenida",
+      "6": "10:30 - 12:30: Competición: Fase de Grupos",
+      "7": "12:30 - 13:30: Almuerzo",
+      "8": "13:30 - 15:00: Competición: Fase de Grupos",
+      "9": "15:00 - 17:00: Competición: Fase de Eliminación Directa",
+      "10": "17:00 - 17:30: Coffee Break",
+      "11": "17:30 - 18:00: Competición: Final",
+      "12": "18:00 - 18:30: Ceremonia de premiación"},
     "FAQ": {
       "TITLE": "Preguntas frecuentes",
       "1": {
