IEEE-36 - Update to the description of PyCourse

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -101,7 +101,7 @@
       "TITLE": "Asimov Cup"
     },
     "CLASSES": {
-      "TEXT": "Programming is an ability that doesn't discriminate professions and dominating them can be enriching for anyone. Our Python courses, both introductory and advanced, are oriented to students, professionals and anybody that is interested no matter which specialization they come from.",
+      "TEXT": "In this course we teach our students the basic concepts of programming, and how to take the first steps using Python.  It’s aimed towards students, with or without experience in programming, and to everyone interested in learning one of the most popular programming languages.",
       "TITLE": "Introductory Python Course"
     },
     "COMISIONS": {
