--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -210,6 +210,20 @@
       "TITLE": "Women In Engineering"
     }
   },
+  "ABOUTUS": {
+    "US": {
+      "TITLE": "Quiénes somos",
+      "TEXT": "IEEE-ITBA es una organización estudiantil sin fines de lucro que representa al IEEE en el Instituto Tecnológico de Buenos Aires."
+    },
+    "OBJECTIVE": {
+      "TITLE": "Objetivo",
+      "TEXT": "Buscamos difundir el conocimiento técnico a la comunidad,  promoviendo el acceso abierto a herramientas tecnológicas y organizando actividades orientadas a la electrónica y programación."
+    },
+    "MISSION": {
+      "TITLE": "Misión",
+      "TEXT": "Como estudiantes, aspiramos al fortalecimiento de habilidades profesionales y a la generación de contactos desde el ciclo estudiantil."
+    }
+  },
   "TEAM": {
     "TITLE": "Equipo",
     "SUBTITLE": "IEEE ITBA se basa en el arduo trabajo de nuestros miembros en sus diferentes rubros, conócelos."
