chore(mainPage): revamped most styles used and fixed navbar bug

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -90,9 +90,14 @@
         "WEBMASTER": "Webmaster"
       }
     },
+    "ABOUTUS": {
+      "TITLE": "About us",
+      "LEARNMORE": "Learn more"
+    },
     "IEEENEWS": {
-      "TITLE": "IEEE News",
-      "CONTENT": "Find out the latest technological and scientific news!"
+      "TITLE": "News",
+      "CONTENT": "Find out the latest technological and scientific news!",
+      "MORENEWS": "View more news"
     },
     "SPONSORS": "Sponsors",
     "BITCUP": {
