fix(news): add missing i18n on paginator controller

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -176,6 +176,9 @@
     "TITLE": "Team",
     "SUBTITLE": "IEEE ITBA is based on the hard work of our members in their different fields, get to know them."
   },
+  "NEWS": {
+    "OF": "of"
+  },
   "IEEEXTREME": {
     "FACTS": {
       "EDITIONS": "Past editions",
